# arxiv-rag-pipeline

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  mypy.ini  pytest.ini  requirements-dev.txt  ruff.toml
.github/workflows/: ci.yml
crawler/: Dockerfile  requirements.txt
ingestion/: main_ingest.py  main_search.py  pyproject.toml
ingestion/src/: main.py
ingestion/src/application/usecases/: ingest_papers.py
ingestion/src/domain/interfaces/: embedding_repository.py  vector_store_repository.py
ingestion/src/infrastructure/embedding/: sentence_transformer_repository.py
ingestion/src/infrastructure/readers/: json_reader.py
ingestion/src/infrastructure/vector_store/: qdrant_repository.py
ingestion/src/ingestion/application/usecases/: ingest_papers.py
ingestion/src/ingestion/domain/interfaces/: embedding_repository.py  vector_store_repository.py
ingestion/src/ingestion/infrastructure/embedding/: sentence_transformer_repository.py
ingestion/src/ingestion/infrastructure/readers/: json_reader.py
ingestion/src/ingestion/infrastructure/vector_store/: qdrant_repository.py
rag/: Dockerfile  pyproject.toml
rag/src/rag/: config.py  main.py
rag/src/rag/application/usecases/: answer_question.py
rag/src/rag/domain/interfaces/: llm_repository.py  session_store.py
rag/src/rag/infrastructure/llm/: ollama_repository.py
rag/src/rag/infrastructure/session/: in_memory_session_store.py  redis_session_store.py
shared/: README.md  pyproject.toml
shared/src/shared/: logger.py
shared/src/shared/domain/entities/: paper.py
shared/src/shared/domain/interfaces/: embedding_repository.py  vector_store_repository.py
shared/src/shared/entities/: paper.py
shared/src/shared/infrastructure/embedding/: sentence_transformer_repository.py
shared/src/shared/infrastructure/vector_store/: qdrant_repository.py
tests/: conftest.py  test_crawler_arxiv_parser.py  test_crawler_harvest_use_case.py  test_crawler_json_writer.py  test_ingestion_ingest_use_case.py  test_ingestion_json_reader.py  test_rag_answer_question.py  test_rag_api.py  test_rag_config.py  test_rag_ollama_repository.py  test_rag_redis_session_store.py  test_shared_paper.py  test_shared_qdrant_repository.py  test_shared_sentence_transformer.py
(+12 files in other folders)
