[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ingestion"
version = "0.1.0"
description = "Pipeline de ingestion (embedding + vector store)"
requires-python = ">=3.10"
dependencies = [
    "sentence-transformers>=3.0.0",
    "qdrant-client>=1.9.0",
    "python-dotenv>=1.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["ingestion*"]
namespaces = true