[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rag"
version = "0.1.0"
description = "API de RAG (retrieval-augmented generation) sobre papers do arXiv"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "requests>=2.31.0",
    "certifi>=2024.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["rag*"]
namespaces = true